[gd_scene load_steps=4 format=3 uid="uid://dp40vwkohdugx"]

[ext_resource type="Script" path="res://Scene_Switcher/Menu/Menu_main.gd" id="1_3ytph"]
[ext_resource type="Texture2D" uid="uid://cloapn1cu0f17" path="res://Scene_Switcher/Menu/asset/main menu/fotor-ai-2024053094316.jpg" id="2_nbmun"]
[ext_resource type="Theme" uid="uid://bae841tqt1b6d" path="res://Scene_Switcher/alligator_theme.tres" id="3_urnu5"]

[node name="Menu_Main" type="CanvasLayer"]
script = ExtResource("1_3ytph")

[node name="Menu_Pic" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_nbmun")
expand_mode = 2
flip_h = true

[node name="cont" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_urnu5")

[node name="columns" type="HBoxContainer" parent="cont"]
layout_mode = 2

[node name="space_left" type="MarginContainer" parent="cont/columns"]
layout_mode = 2
size_flags_horizontal = 3

[node name="lines" type="VBoxContainer" parent="cont/columns"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 0.5
theme_override_constants/separation = 80

[node name="Title" type="Label" parent="cont/columns/lines"]
layout_mode = 2
theme_override_colors/font_color = Color(0.205314, 0.310305, 0.101684, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.501961)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 4
theme_override_constants/shadow_outline_size = 2
theme_override_font_sizes/font_size = 140
text = "Alligator"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Play_Button" type="Button" parent="cont/columns/lines"]
layout_mode = 2
text = "Play
"

[node name="See_Score" type="Button" parent="cont/columns/lines"]
layout_mode = 2
text = "Score
"

[node name="Option_Button" type="Button" parent="cont/columns/lines"]
layout_mode = 2
text = "Option"

[node name="Quit_Button" type="Button" parent="cont/columns/lines"]
layout_mode = 2
text = "Quit"

[node name="space_right" type="MarginContainer" parent="cont/columns"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="cont/columns/lines/Play_Button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="cont/columns/lines/See_Score" to="." method="_on_see_score_pressed"]
[connection signal="pressed" from="cont/columns/lines/Option_Button" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="cont/columns/lines/Quit_Button" to="." method="_on_quit_button_pressed"]
